--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script type="text/javascript">
+      var isAndroid = navigator.userAgent.toLowerCase().indexOf("android") > -1; //&& ua.indexOf("mobile");
+      if (isAndroid) {
+        document.write(
+          '<meta name="viewport" content="width=device-width,height=' +
+            window.innerHeight +
+            ', initial-scale=1.0">'
+        );
+      }
+    </script>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
